--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,10 @@ code {
     monospace;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   body {
     height: 120vh;
     width: 100vw;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
   }
 }
